--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -17,7 +17,7 @@
     <h2>Settings</h2>
   </div>
 
-  <div class="close-button" (click)="closeOverlay()">X</div>
+  <app-close-button (buttonClicked)="closeOverlay()"></app-close-button>
 
   <nav>
     <div
