--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
@@ -136,3 +136,24 @@ section {
 .sequence-complete {
   border-radius: 4px;
 }
+
+h2 {
+  color: $copy-light;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 80%;
+
+  @media (max-width: 400px) {
+    max-width: 100px;
+  }
+}
+
+app-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
