--- a/src/app/shared/components/preview-overlay/preview-overlay.component.html
+++ b/src/app/shared/components/preview-overlay/preview-overlay.component.html
@@ -1,5 +1,8 @@
 <section (click)="closeOverlay()">
   <div class="content-wrapper" [ngClass]="{ 'start-animation': start }">
-    <app-flow-sequence-details></app-flow-sequence-details>
+    <app-flow-sequence-details
+      [isPreview]="true"
+      (closeOverlayClicked)="closeOverlay()"
+    ></app-flow-sequence-details>
   </div>
 </section>
