wrap SVGs in a tags with links / comment out BuyMeACoffee section

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -54,115 +54,129 @@
     <div class="social-media-wrapper">
       <span>Social Media</span>
 
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
+      <a
+        href="https://www.instagram.com/katrin_adidah_design/"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="instagram öffnen"
       >
-        <g clip-path="url(#clip0_1817_1362)">
-          <path
-            d="M12 16C13.0609 16 14.0783 15.5786 14.8284 14.8284C15.5786 14.0783 16 13.0609 16 12C16 10.9391 15.5786 9.92172 14.8284 9.17157C14.0783 8.42143 13.0609 8 12 8C10.9391 8 9.92172 8.42143 9.17157 9.17157C8.42143 9.92172 8 10.9391 8 12C8 13.0609 8.42143 14.0783 9.17157 14.8284C9.92172 15.5786 10.9391 16 12 16Z"
-            [attr.stroke]="
-              legalAndLogin
-                ? 'rgba(106, 158, 157, 1)'
-                : settingsService.appSettings.theme.accentColor
-            "
-            stroke-width="1.25"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M3 16V8C3 6.67392 3.52678 5.40215 4.46447 4.46447C5.40215 3.52678 6.67392 3 8 3H16C17.3261 3 18.5979 3.52678 19.5355 4.46447C20.4732 5.40215 21 6.67392 21 8V16C21 17.3261 20.4732 18.5979 19.5355 19.5355C18.5979 20.4732 17.3261 21 16 21H8C6.67392 21 5.40215 20.4732 4.46447 19.5355C3.52678 18.5979 3 17.3261 3 16Z"
-            [attr.stroke]="
-              legalAndLogin
-                ? 'rgba(106, 158, 157, 1)'
-                : settingsService.appSettings.theme.accentColor
-            "
-            stroke-width="1.25"
-          />
-          <path
-            d="M17.5 6.51002L17.51 6.49902"
-            [attr.stroke]="
-              legalAndLogin
-                ? 'rgba(106, 158, 157, 1)'
-                : settingsService.appSettings.theme.accentColor
-            "
-            stroke-width="1.25"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </g>
-        <defs>
-          <clipPath id="clip0_1817_1362">
-            <rect width="24" height="24" fill="white" />
-          </clipPath>
-        </defs>
-      </svg>
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g clip-path="url(#clip0_1817_1362)">
+            <path
+              d="M12 16C13.0609 16 14.0783 15.5786 14.8284 14.8284C15.5786 14.0783 16 13.0609 16 12C16 10.9391 15.5786 9.92172 14.8284 9.17157C14.0783 8.42143 13.0609 8 12 8C10.9391 8 9.92172 8.42143 9.17157 9.17157C8.42143 9.92172 8 10.9391 8 12C8 13.0609 8.42143 14.0783 9.17157 14.8284C9.92172 15.5786 10.9391 16 12 16Z"
+              [attr.stroke]="
+                legalAndLogin
+                  ? 'rgba(106, 158, 157, 1)'
+                  : settingsService.appSettings.theme.accentColor
+              "
+              stroke-width="1.25"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M3 16V8C3 6.67392 3.52678 5.40215 4.46447 4.46447C5.40215 3.52678 6.67392 3 8 3H16C17.3261 3 18.5979 3.52678 19.5355 4.46447C20.4732 5.40215 21 6.67392 21 8V16C21 17.3261 20.4732 18.5979 19.5355 19.5355C18.5979 20.4732 17.3261 21 16 21H8C6.67392 21 5.40215 20.4732 4.46447 19.5355C3.52678 18.5979 3 17.3261 3 16Z"
+              [attr.stroke]="
+                legalAndLogin
+                  ? 'rgba(106, 158, 157, 1)'
+                  : settingsService.appSettings.theme.accentColor
+              "
+              stroke-width="1.25"
+            />
+            <path
+              d="M17.5 6.51002L17.51 6.49902"
+              [attr.stroke]="
+                legalAndLogin
+                  ? 'rgba(106, 158, 157, 1)'
+                  : settingsService.appSettings.theme.accentColor
+              "
+              stroke-width="1.25"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0_1817_1362">
+              <rect width="24" height="24" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
+      </a>
 
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
+      <a
+        href="https://discord.gg/nKmRH8ESjs"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Discord-Server öffnen"
       >
-        <g clip-path="url(#clip0_1817_1368)">
-          <path
-            d="M5.5 16C10.5 18.5 13.5 18.5 18.5 16"
-            [attr.stroke]="
-              legalAndLogin
-                ? 'rgba(106, 158, 157, 1)'
-                : settingsService.appSettings.theme.accentColor
-            "
-            stroke-width="1.25"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M15.5 17.5L16.5 19.5C16.5 19.5 20.671 18.172 22 16C22 15 22.53 7.853 19 5.5C17.5 4.5 15 4 15 4L14 6H12"
-            [attr.stroke]="
-              legalAndLogin
-                ? 'rgba(106, 158, 157, 1)'
-                : settingsService.appSettings.theme.accentColor
-            "
-            stroke-width="1.25"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M8.52827 17.5L7.52827 19.5C7.52827 19.5 3.35727 18.172 2.02827 16C2.02827 15 1.49827 7.853 5.02827 5.5C6.52827 4.5 9.02827 4 9.02827 4L10.0283 6H12.0283"
-            [attr.stroke]="
-              legalAndLogin
-                ? 'rgba(106, 158, 157, 1)'
-                : settingsService.appSettings.theme.accentColor
-            "
-            stroke-width="1.25"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M8.5 14C7.672 14 7 13.105 7 12C7 10.895 7.672 10 8.5 10C9.328 10 10 10.895 10 12C10 13.105 9.328 14 8.5 14ZM15.5 14C14.672 14 14 13.105 14 12C14 10.895 14.672 10 15.5 10C16.328 10 17 10.895 17 12C17 13.105 16.328 14 15.5 14Z"
-            [attr.stroke]="
-              legalAndLogin
-                ? 'rgba(106, 158, 157, 1)'
-                : settingsService.appSettings.theme.accentColor
-            "
-            stroke-width="1.25"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </g>
-        <defs>
-          <clipPath id="clip0_1817_1368">
-            <rect width="24" height="24" fill="white" />
-          </clipPath>
-        </defs>
-      </svg>
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g clip-path="url(#clip0_1817_1368)">
+            <path
+              d="M5.5 16C10.5 18.5 13.5 18.5 18.5 16"
+              [attr.stroke]="
+                legalAndLogin
+                  ? 'rgba(106, 158, 157, 1)'
+                  : settingsService.appSettings.theme.accentColor
+              "
+              stroke-width="1.25"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M15.5 17.5L16.5 19.5C16.5 19.5 20.671 18.172 22 16C22 15 22.53 7.853 19 5.5C17.5 4.5 15 4 15 4L14 6H12"
+              [attr.stroke]="
+                legalAndLogin
+                  ? 'rgba(106, 158, 157, 1)'
+                  : settingsService.appSettings.theme.accentColor
+              "
+              stroke-width="1.25"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M8.52827 17.5L7.52827 19.5C7.52827 19.5 3.35727 18.172 2.02827 16C2.02827 15 1.49827 7.853 5.02827 5.5C6.52827 4.5 9.02827 4 9.02827 4L10.0283 6H12.0283"
+              [attr.stroke]="
+                legalAndLogin
+                  ? 'rgba(106, 158, 157, 1)'
+                  : settingsService.appSettings.theme.accentColor
+              "
+              stroke-width="1.25"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M8.5 14C7.672 14 7 13.105 7 12C7 10.895 7.672 10 8.5 10C9.328 10 10 10.895 10 12C10 13.105 9.328 14 8.5 14ZM15.5 14C14.672 14 14 13.105 14 12C14 10.895 14.672 10 15.5 10C16.328 10 17 10.895 17 12C17 13.105 16.328 14 15.5 14Z"
+              [attr.stroke]="
+                legalAndLogin
+                  ? 'rgba(106, 158, 157, 1)'
+                  : settingsService.appSettings.theme.accentColor
+              "
+              stroke-width="1.25"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0_1817_1368">
+              <rect width="24" height="24" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
+      </a>
     </div>
 
-    <div class="footer-item pointer">
+    <a href="mailto:flowseq@adidah.design" class="footer-item pointer">
       <span>Contact</span>
 
       <svg
@@ -200,9 +214,9 @@
           </clipPath>
         </defs>
       </svg>
-    </div>
+    </a>
 
-    <div class="footer-item pointer">
+    <!-- <div class="footer-item pointer">
       <span>Buy Us A Coffee</span>
 
       <svg
@@ -242,7 +256,7 @@
           </clipPath>
         </defs>
       </svg>
-    </div>
+    </div> -->
   </div>
 
   <div class="right-wrapper">
