--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,6 +8,7 @@
     data-name="Final Logo"
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 326.3860777131 52.1279270046"
+    (click)="navigateLoginOrWelcome()"
   >
     <defs>
       <style>
