links in privacy policy and tos

--- a/src/app/shared/components/login-info-base/privacy-policy/privacy-policy.component.html
+++ b/src/app/shared/components/login-info-base/privacy-policy/privacy-policy.component.html
@@ -349,7 +349,12 @@
     </p>
     <p>
       Source:<br />
-      <a href="https://www.e-recht24.de">https://www.e-recht24.de</a><br />
+      <a
+        href="https://www.e-recht24.de"
+        target="_blank"
+        rel="noopener noreferrer"
+        >https://www.e-recht24.de</a
+      ><br />
       Translation to English by Google.
     </p>
   </div>
