--- a/src/app/shared/components/login-info-base/terms-conditions/terms-conditions.component.html
+++ b/src/app/shared/components/login-info-base/terms-conditions/terms-conditions.component.html
@@ -34,7 +34,13 @@
         Use with Google Login: Users can voluntarily log in via their Google
         account. In this case, the tool itself does not store any personal data;
         however, data may be transferred to Google as part of the login process.
-        For more information, please refer to Google's privacy policy.
+        For more information, please refer to
+        <a
+          href="https://policies.google.com/privacy"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Google's privacy policy</a
+        >.
       </li>
     </ul>
 
