--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
@@ -211,6 +211,11 @@ section {
 
       input {
         text-align: center;
+
+        &::-webkit-inner-spin-button,
+        ::-webkit-outer-spin-button {
+          display: none;
+        }
       }
     }
   }
