animated background on theme change

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -7,7 +7,7 @@
 
       <p>
         Create your own custom workflow sequences &ndash; alternating phases of
-        focused deep-work sprints and relaxation breaks
+        focused deep-work sprints and relaxation breaks.
       </p>
 
       <p>
@@ -20,7 +20,7 @@
     <div class="bottom">
       <p>
         Sign in with your <b>Google account</b> &ndash; all your Flow Sequences
-        and settings are securely encrypted in a database. (recommended)
+        and settings are securely saved in a database. (recommended)
       </p>
 
       <p>
