setup more tooltips / footer icon for links that open in a new tab

--- a/src/app/home/components/welcome/welcome.component.html
+++ b/src/app/home/components/welcome/welcome.component.html
@@ -64,6 +64,8 @@
       ></app-glass-button>
 
       <app-glass-button
+        matTooltip="Create your own Custom Flow Sequence. Adjust the length of your time windows for deep work and following relaxation to your liking. You are a beast easily focussing for 2 hours and then love to make a break for 30 mintues? Do it! You prefer sprints of 20 minutes and breaks of 5 minutes? Set it up your way!"
+        [matTooltipPosition]="'above'"
         [btnAction]="'Create'"
         [btnName]="'Custom'"
         [btnType]="'Flow Sequence'"
@@ -71,6 +73,8 @@
       ></app-glass-button>
 
       <app-glass-button
+        matTooltip="Browse your saved custom sequences. You can select one and start working right away or edit and fine-tune them. Deleting a flow sequence can not be undone - so be careful! The Standard Flow Sequence & Reverse Flow Sequence can not be deleted."
+        [matTooltipPosition]="'above'"
         [btnAction]="'Browse'"
         [btnName]="'Saved'"
         [btnType]="'Flow Sequences'"
