--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.scss
@@ -167,6 +167,15 @@ section {
   position: relative;
 }
 
+.confirm-delete-overlay {
+  position: absolute;
+
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .confirm-delete {
   position: absolute;
   top: 36px;
