more code comments / minor fix in top and bottom gradient

--- a/src/app/home/components/timer/timer.component.html
+++ b/src/app/home/components/timer/timer.component.html
@@ -104,10 +104,10 @@
     ></div>
   </div>
 
-  @if (!flowSequenceDetailsOpen) {
+  <!-- @if (!flowSequenceDetailsOpen) {
   <img
     (click)="editTimer()"
     src="assets/img/icons/edit-flowsequence.svg"
     alt="edit"
-  />}
+  />} -->
 </section>
