--- a/src/app/shared/components/login-info-base/login-info-base.component.html
+++ b/src/app/shared/components/login-info-base/login-info-base.component.html
@@ -17,7 +17,8 @@
       background:
         'linear-gradient(0deg,' +
         'rgb(12, 23, 19) 0%' +
-        ', rgba(12, 23, 19, 0) 100%)'
+        ', rgba(12, 23, 19, 0) 100%)',
+      'z-index': loginPage ? null : 1
     }"
     class="gradient-bottom"
   ></div>
