--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -20,8 +20,8 @@ footer {
   @media (max-width: 1000px) {
     flex-direction: column;
     justify-content: flex-start;
-    gap: 42px;
-    padding: 64px 32px;
+    gap: 8px;
+    padding: 32px;
   }
 }
 
@@ -30,7 +30,7 @@ footer {
   @include dFlex($jc: flex-start, $gp: 80px);
 
   @media (max-width: 1200px) {
-    gap: 24px;
+    gap: 8px;
   }
 
   @media (max-width: 1000px) {
